Fixed bug from testing microsoft edge responsive design sign-up form covering cover text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,6 @@ header {
 
     #form {
         left: 14%;
-        top: 53%;
+        top: 250px;
     }
 }
